--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,14 +19,14 @@
     <string name="register_email">Email</string>
     <string name="register_password">Password</string>
     <string name="register_password_repeat">Repeat password</string>
-    <string name="register_btn_action">Sign up</string>
+    <string name="register_btn_action">Register</string>
 
     <!--Login-->
     <string name="login_email">Email</string>
     <string name="login_password">Password</string>
     <string name="login_btn_action">Sign in</string>
     <string name="login_not_have_account">You don\'t have an account?</string>
-    <string name="login_go_to_register">Sign up</string>
+    <string name="login_go_to_register">Create account</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
