--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,11 +31,11 @@
     <!--Create recipe-->
     <string name="create_recipe_activity_title">Create recipe</string>
     <string name="create_recipe_title">Recipe title</string>
-    <string name="create_recipe_short_description">Short description</string>
-    <string name="create_recipe_description">Recipe description</string>
     <string name="create_recipe_needed_time">Needed time (minutes)</string>
-    <string name="create_recipe_image">Attach image</string>
+    <string name="create_recipe_short_description">Short description</string>
+    <string name="create_recipe_description">Recipe full description:</string>
     <string name="create_private_recipe">Private recipe</string>
+    <string name="create_recipe_image">Attach image</string>
     <string name="create_recipe_button">Create</string>
 
     <!-- TODO: Remove or change this placeholder text -->
