IF user not logged cant event see create recipe method

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,7 +12,7 @@
 
     <!--Account fragment-->
     <string name="go_to_login">Login or Register</string>
-    <string name="not_logged">You are not logged in yet</string>
+    <string name="not_logged">You are not logged in yet. Login or register to browse your recipes and add new ones</string>
 
     <!--Logged account fragment-->
     <string name="logout">Logout</string>
